--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -3,14 +3,13 @@ FROM python:3.9-slim-buster
 RUN mkdir /install 
 WORKDIR /install
 
-COPY requirements.txt requirements.txt
+COPY . .
 RUN /usr/local/bin/python -m pip install --upgrade pip
 RUN pip3 install -r requirements.txt
 
-COPY . .
 ENV PORT 3000
 ENV FLASK_ENV development
 ENV FLASK_APP '.'
-EXPOSE 3000
+# EXPOSE 3000
 
 CMD [ "flask", "run", "--host=0.0.0.0", "--port=3000"]
