--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ flask = "*"
 psycopg2-binary = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
+mistune = "*"
+req = "*"
 
 [dev-packages]
 python-dotenv = "*"
