--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ sqlalchemy==1.4.39; python_version >= '2.7' and python_version not in '3.0, 3.1,
 werkzeug==2.2.1; python_version >= '3.7'
 zipp==3.8.1; python_version >= '3.7'
 python-dotenv==0.20.0
+mistune==2.0.4
